--- a/_config.yml
+++ b/_config.yml
@@ -32,7 +32,7 @@ social_media:
   # dribbble: your_username
   # facebook: your_username
   # linkedin: your_username
-  medium: @tcbyrd
+  medium: tcbyrd
   # stackoverflow: your_user_id
   # telegram: your_username
   twitter: _tcbyrd
